# zelusbench

./: .gitignore  README.md  pyproject.toml  results.csv  submission.md  viz.ipynb  writeup.md
tasks/: attention_updating.ipynb  attn_complex.ipynb  attn_dim_2.ipynb  attn_dim_3.ipynb  attn_medium.ipynb  attn_selective_clean.ipynb  attn_selective_noisy.ipynb  attn_selective_saturated.ipynb  attn_simple.ipynb  attn_structural_branching.ipynb  attn_structural_diamond.ipynb  attn_structural_linear.ipynb  attn_structural_merging.ipynb  attn_sustained_long.ipynb  attn_sustained_medium.ipynb  attn_sustained_short.ipynb  attn_updating_heavy.ipynb  attn_updating_light.ipynb  attn_updating_static.ipynb  dimensionality.ipynb  selective_attention.ipynb  structural_attention.ipynb  sustained_attention.ipynb  zelusbench_attn_sustained_short.task.json  zelusbench_selective.ipynb  zelusbench_selective_long.ipynb  zelusbench_selective_medium.ipynb  zelusbench_selective_short.ipynb  zelusbench_shifting.ipynb  zelusbench_shifting_long.ipynb  zelusbench_shifting_medium.ipynb  zelusbench_shifting_short.ipynb  zelusbench_sustained.ipynb  zelusbench_sustained_long.ipynb  zelusbench_sustained_medium.ipynb  zelusbench_sustained_short.ipynb
tests/: test_point.py  test_scenarios.py  test_space.py  test_transforms.py
zelusbench/: __init__.py
zelusbench/evaluation/: __init__.py  parser.py  reports.py  scorer.py
zelusbench/geometry/: __init__.py  point.py  space.py  transforms.py  vectors.py
zelusbench/scenarios/: __init__.py  config.py  distractors.py  generator.py  templates.py
