[project]
name = "zelusbench"
version = "0.1.0"
description = "geometric benchmark for ai attention"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "nbformat>=5.0",
]

[tool.setuptools.packages.find]
include = ["zelusbench*"]
